--- a/index.html
+++ b/index.html
@@ -5,9 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Library</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 </head>
-<body>
-    
+<body class="bg-slate-800">
+
+    <!--Main Container-->
+    <div class="flex flex-col">
+
+        <!--Header-->
+        <div class="bg-blue-800 w-full flex justify-center items-center gap-8 p-3">
+            <p class="text-blue-300 text-3xl whitespace-nowrap flex items-center">My Library</p>
+            <button class="text-blue-100 text-l bg-slate-800 rounded p-1">New<br>Book</button>
+            <!--Search Bar-->
+            <div class="relative">
+                <input type="text" placeholder="Search" class="text-blue-100 text-l bg-slate-800 rounded p-1 h-fit pl-8 pr-4">
+                <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                  <svg class="h-4 w-4 fill-current text-gray-500" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.5 12a5.5 5.5 0 1 1 3.889-1.611l4.428 4.427a1 1 0 1 1-1.414 1.414l-4.428-4.427A5.453 5.453 0 0 1 6.5 12zm0-9a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7z" />
+                  </svg>
+                </span>
+              </div>
+        </div>
+
+        <!--Library-->
+        <div class="bg-blue-900 m-6">
+            <table class="text-blue-300 w-full">
+                <thead class="font-bold">
+                <tr>
+                    <th class="">Title</th>
+                    <th class="">Author</th>
+                    <th class="">Pages Read</th>
+                    <th class="">Total Pages</th>
+                    <th class="">Read</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>The Hobbit</td>
+                    <td>J.R.R. Tolkien</td>
+                    <td class="text-center">0</td>
+                    <td class="text-center">295</td>
+                    <td class="text-center"><input type="checkbox"></td>
+                </tr>
+                <tr>
+                    <td>To Kill a Mockingbird</td>
+                    <td>Harper Lee</td>
+                    <td class="text-center">281</td>
+                    <td class="text-center">281</td>
+                    <td class="text-center"><input type="checkbox" checked></td>
+                </tr>
+                <!-- Add more rows for each book -->
+                </tbody>
+            </table>
+        </div>
+
+        <!--Footer-->
+        <div class="bg-slate-900">
+
+        </div>
+    </div>
+<script src="/scripts/scripts.js"></script>
 </body>
 </html>
