Add border spacing and nth child coloring to make table more readable

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
             <table class="text-blue-300 w-full">
                 <thead class="font-bold">
                 <tr>
-                    <th class="">Title</th>
-                    <th class="">Author</th>
-                    <th class="">Pages Read</th>
-                    <th class="">Total Pages</th>
-                    <th class="">Read</th>
+                    <th class="border p-2">Title</th>
+                    <th class="border p-2">Author</th>
+                    <th class="border p-2">Pages Read</th>
+                    <th class="border p-2">Total Pages</th>
+                    <th class="border p-2">Read</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td>The Hobbit</td>
-                    <td>J.R.R. Tolkien</td>
-                    <td class="text-center">0</td>
-                    <td class="text-center">295</td>
-                    <td class="text-center"><input type="checkbox"></td>
+                    <td class="border p-2">The Hobbit</td>
+                    <td class="border p-2">J.R.R. Tolkien</td>
+                    <td class="text-center border p-2">0</td>
+                    <td class="text-center border p-2">295</td>
+                    <td class="text-center border p-2"><input type="checkbox"></td>
                 </tr>
                 <tr>
-                    <td>To Kill a Mockingbird</td>
-                    <td>Harper Lee</td>
-                    <td class="text-center">281</td>
-                    <td class="text-center">281</td>
-                    <td class="text-center"><input type="checkbox" checked></td>
+                    <td class="border p-2">To Kill a Mockingbird</td>
+                    <td class="border p-2">Harper Lee</td>
+                    <td class="text-center border p-2">281</td>
+                    <td class="text-center border p-2">281</td>
+                    <td class="text-center border p-2"><input type="checkbox" checked></td>
                 </tr>
                 <!-- Add more rows for each book -->
                 </tbody>
