--- a/index.html
+++ b/index.html
@@ -11,13 +11,55 @@
 
     <!--Main Container-->
     <div class="flex flex-col">
+        <!--Modals-->
+
+        <!--Overlay modal to be used to focus other modals-->
+        <div id="overlay" class="hidden absolute min-h-full inset-0 backdrop-blur-sm backdrop-brightness-50 z-10"></div>
+
+
+          
+
+        <!--Search Modal: This is the modal that pops up when "Search" is clicked-->
+        <div class="fixed z-10 inset-0 overflow-y-auto hidden" id="search-modal">
+            <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                <!-- This is an overlay element that darkens the background when the modal is open -->
+                <div class="fixed inset-0 transition-opacity">
+                    <div class="absolute inset-0 bg-gray-500 opacity-75 blur"></div>
+                </div>
+                <!-- This is the actual modal content, a white card that contains the search input and buttons -->
+                <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full">
+                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                        <div class="sm:flex sm:items-start">
+                            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Search Books</h3>
+                                <div class="mt-2">
+                                    <label for="search-input" class="sr-only">Search by</label>
+                                    <input type="text" name="search-input" id="search-input" class="w-full px-4 py-2 border border-gray-300 rounded-md" placeholder="Search by title, author or ISBN">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                        <button type="button" id="close-search-modal" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-gray-600 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:text-sm mr-2">
+                            Close
+                        </button>
+                        <button type="button" id="add-book-btn" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:text-sm">
+                            Add Book
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
         <!--Header-->
         <div class="bg-blue-800 w-full flex justify-center items-center gap-8 p-3">
             <p class="text-blue-300 text-3xl whitespace-nowrap flex items-center">My Library</p>
-            <button class="text-blue-100 text-l bg-slate-800 rounded p-1">New<br>Book</button>
+            <!--New Book-->
+            <button id="new-book-btn" class="text-blue-100 text-l bg-slate-800 rounded p-1">New<br>Book</button>
+
+
             <!--Search Bar-->
             <div class="relative">
                 <input type="text" placeholder="Search" class="text-blue-100 text-l bg-slate-800 rounded p-1 h-fit pl-8 pr-4">
@@ -37,44 +79,71 @@
                 <div class="mx-3 my-2 px-2 py-1 text-xl">Library</div>
                 <div class="mx-3 my-2 px-2 py-1 text-xl">Wishlist</div>
             </div>
-            <!--Library Table-->
-            <div class="bg-blue-900 m-6 w-full">
-                <table class="text-blue-300 w-full">
-                    <thead class="font-bold">
-                    <tr>
-                        <th class="border p-2">Title</th>
-                        <th class="border p-2">Author</th>
-                        <th class="border p-2">Pages Read</th>
-                        <th class="border p-2">Total Pages</th>
-                        <th class="border p-2">Read</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td class="border p-2">The Hobbit</td>
-                        <td class="border p-2">J.R.R. Tolkien</td>
-                        <td class="text-center border p-2">0</td>
-                        <td class="text-center border p-2">295</td>
-                        <td class="text-center border p-2"><input type="checkbox"></td>
-                    </tr>
-                    <tr>
-                        <td class="border p-2">To Kill a Mockingbird</td>
-                        <td class="border p-2">Harper Lee</td>
-                        <td class="text-center border p-2">281</td>
-                        <td class="text-center border p-2">281</td>
-                        <td class="text-center border p-2"><input type="checkbox" checked></td>
-                    </tr>
-                    <!-- Add more rows for each book -->
-                    </tbody>
-                </table>
-            </div>                                                                                                                   
-        </div>
+            <div class="flex w-full relative">
+                <!--Library Table-->
+                <div class="bg-blue-900 m-6 w-full">
+                    <table class="text-blue-300 w-full">
+                        <thead class="font-bold">
+                        <tr>
+                            <th class="border p-2">Title</th>
+                            <th class="border p-2">Author</th>
+                            <th class="border p-2">Pages Read</th>
+                            <th class="border p-2">Total Pages</th>
+                            <th class="border p-2">Read</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td class="border p-2">The Hobbit</td>
+                            <td class="border p-2">J.R.R. Tolkien</td>
+                            <td class="text-center border p-2">0</td>
+                            <td class="text-center border p-2">295</td>
+                            <td class="text-center border p-2"><input type="checkbox"></td>
+                        </tr>
+                        <tr>
+                            <td class="border p-2">To Kill a Mockingbird</td>
+                            <td class="border p-2">Harper Lee</td>
+                            <td class="text-center border p-2">281</td>
+                            <td class="text-center border p-2">281</td>
+                            <td class="text-center border p-2"><input type="checkbox" checked></td>
+                        </tr>
+                        <!-- Add more rows for each book -->
+                        </tbody>
+                    </table>
+                </div>
+                
+                    <!-- New Book Modal: This is the modal that pops up when "New Book" button is clicked -->
+                    <div class="hidden absolute top-0 left-0 z-10 w-full h-full flex items-center justify-center" id="new-book-modal">
+                        <!-- This is a flex container to center the content vertically and horizontally in the viewport -->
+                        <div class="min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                            <!-- This is the actual modal content, a white card that contains the options to search or manually enter a new book -->
+                            <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full m-4">
+                                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                                <div class="sm:flex sm:items-start">
+                                    <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Add a New Book</h3>
+                                    <div class="mt-2">
+                                        <!-- This is a container for the "Search" and "Manual Entry" buttons -->
+                                        <div class="flex flex-col space-y-2">
+                                        <button id="search-btn" class="bg-gray-200 px-4 py-2 rounded-md text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Search</button>
+                                        <button id="manual-btn" class="bg-gray-200 px-4 py-2 rounded-md text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Manual Entry</button>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+            </div>
+         </div>
 
         <!--Footer-->
         <div class="bg-slate-900">
 
         </div>
     </div>
-<script src="/scripts/scripts.js"></script>
+    <script src="/scripts/scripts.js"></script>
 </body>
 </html>
