--- a/index.html
+++ b/index.html
@@ -11,47 +11,9 @@
 
     <!--Main Container-->
     <div class="flex flex-col">
-        <!--Modals-->
 
         <!--Overlay modal to be used to focus other modals-->
-        <div id="overlay" class="hidden absolute min-h-full inset-0 backdrop-blur-sm backdrop-brightness-50 z-10"></div>
-
-
-          
-
-        <!--Search Modal: This is the modal that pops up when "Search" is clicked-->
-        <div class="fixed z-10 inset-0 overflow-y-auto hidden" id="search-modal">
-            <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
-                <!-- This is an overlay element that darkens the background when the modal is open -->
-                <div class="fixed inset-0 transition-opacity">
-                    <div class="absolute inset-0 bg-gray-500 opacity-75 blur"></div>
-                </div>
-                <!-- This is the actual modal content, a white card that contains the search input and buttons -->
-                <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full">
-                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                        <div class="sm:flex sm:items-start">
-                            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Search Books</h3>
-                                <div class="mt-2">
-                                    <label for="search-input" class="sr-only">Search by</label>
-                                    <input type="text" name="search-input" id="search-input" class="w-full px-4 py-2 border border-gray-300 rounded-md" placeholder="Search by title, author or ISBN">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                        <button type="button" id="close-search-modal" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-gray-600 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:text-sm mr-2">
-                            Close
-                        </button>
-                        <button type="button" id="add-book-btn" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:text-sm">
-                            Add Book
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
+        <div id="overlay" class="hidden absolute min-h-full inset-0 backdrop-blur-sm backdrop-brightness-50 z-20"></div>
 
         <!--Header-->
         <div class="bg-blue-800 w-full flex justify-center items-center gap-8 p-3">
@@ -79,6 +41,7 @@
                 <div class="mx-3 my-2 px-2 py-1 text-xl">Library</div>
                 <div class="mx-3 my-2 px-2 py-1 text-xl">Wishlist</div>
             </div>
+            <!--Content-->
             <div class="flex w-full relative">
                 <!--Library Table-->
                 <div class="bg-blue-900 m-6 w-full">
@@ -111,30 +74,68 @@
                         </tbody>
                     </table>
                 </div>
-                
-                    <!-- New Book Modal: This is the modal that pops up when "New Book" button is clicked -->
-                    <div class="hidden absolute top-0 left-0 z-10 w-full h-full flex items-center justify-center" id="new-book-modal">
-                        <!-- This is a flex container to center the content vertically and horizontally in the viewport -->
-                        <div class="min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
-                            <!-- This is the actual modal content, a white card that contains the options to search or manually enter a new book -->
-                            <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full m-4">
-                                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                                <div class="sm:flex sm:items-start">
-                                    <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Add a New Book</h3>
-                                    <div class="mt-2">
-                                        <!-- This is a container for the "Search" and "Manual Entry" buttons -->
-                                        <div class="flex flex-col space-y-2">
-                                        <button id="search-btn" class="bg-gray-200 px-4 py-2 rounded-md text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Search</button>
-                                        <button id="manual-btn" class="bg-gray-200 px-4 py-2 rounded-md text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Manual Entry</button>
-                                        </div>
-                                    </div>
+
+                <!--Modals-->
+                <!-- New Book Modal: This is the modal that pops up when "New Book" button is clicked -->
+                <div id="new-book-modal" class="hidden absolute top-0 left-0 z-30 w-full h-full flex items-center justify-center">
+                    <!-- This is a flex container to center the content vertically and horizontally in the viewport -->
+                    <div class="min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                        <!-- This is the actual modal content, a white card that contains the options to search or manually enter a new book -->
+                        <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full m-4">
+                            <button id="close-new-book-modal" class="absolute top-0 right-0 pr-3 text-xl font-bold text-red-500 hover:text-red-600 focus:outline-none">&times;</button>
+                            <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                            <div class="sm:flex sm:items-start">
+                                <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                                <h3 class="text-lg leading-6 font-medium text-gray-900 pb-2" id="modal-title">Add a New Book</h3>
+                                <div class="mt-2">
+                                    <!-- This is a container for the "Search" and "Manual Entry" buttons -->
+                                    <div class="flex flex-col space-y-2">
+                                        <button id="search-btn" class="bg-gray-200 px-4 py-2 rounded-lg text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Search</button>
+                                        <button id="manual-btn" class="bg-gray-200 px-4 py-2 rounded-lg text-gray-700 font-medium hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400">Manual Entry</button>
                                     </div>
                                 </div>
                                 </div>
                             </div>
+                            </div>
                         </div>
                     </div>
+                </div>
+
+                <!--Search Modal: This is the modal that pops up when "Search" is clicked-->
+                <div id="search-modal" class="hidden absolute top-5 left-0 z-30 w-full h-full overflow-y-auto">
+                <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                    <!-- This is the actual modal content, a white card that contains the search input and buttons -->
+                    <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full">
+                    <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                        <div class="w-full sm:flex sm:items-start">
+                            <div class="mt-3 text-center w-full sm:mt-0 sm:ml-4 sm:text-left">
+                                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">Search Books</h3>
+                                <!--Search Bar-->
+                                <div class="mt-2 flex">
+                                  <label for="search-criteria" class="sr-only">Search by</label>
+                                  <select id="search-criteria" name="search-criteria" class="focus:ring-blue-500 focus:border-blue-500 block w-full sm:w-auto pl-3 pr-10 py-2 border-gray-300 rounded-md mr-2">
+                                    <option>Title</option>
+                                    <option>Author</option>
+                                    <option>ISBN</option>
+                                  </select>
+                                  <input type="text" name="search-input" id="search-input" class="w-full sm:w-auto flex-1 px-4 py-2 border border-gray-300 rounded-md" placeholder="Search">
+                                  <div id="search-results" class="mt-4"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                        <button type="button" id="close-search-modal" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-gray-600 text-base font-medium text-white hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500 sm:text-sm mr-2">
+                        Close
+                        </button>
+                        <button type="button" id="add-book-btn" class="inline-flex justify-center w-full sm:w-auto rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:text-sm">
+                        Add Book
+                        </button>
+                    </div>
+                    </div>
+                </div>
+                </div>
+
 
             </div>
          </div>
