Add function add to library and delete buttons

--- a/index.html
+++ b/index.html
@@ -56,24 +56,12 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td class="border p-2">The Hobbit</td>
-                            <td class="border p-2">J.R.R. Tolkien</td>
-                            <td class="text-center border p-2">0</td>
-                            <td class="text-center border p-2">295</td>
-                            <td class="text-center border p-2"><input type="checkbox"></td>
-                        </tr>
-                        <tr>
-                            <td class="border p-2">To Kill a Mockingbird</td>
-                            <td class="border p-2">Harper Lee</td>
-                            <td class="text-center border p-2">281</td>
-                            <td class="text-center border p-2">281</td>
-                            <td class="text-center border p-2"><input type="checkbox" checked></td>
-                        </tr>
+                        
                         <!-- Add more rows for each book -->
                         </tbody>
                     </table>
                 </div>
+
 
                 <!--Modals-->
                 <!-- New Book Modal: This is the modal that pops up when "New Book" button is clicked -->
@@ -105,7 +93,7 @@
                 <div id="search-modal" class="hidden absolute top-5 left-0 z-30 w-full h-full overflow-y-auto">
                 <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
                     <!-- This is the actual modal content, a white card that contains the search input and buttons -->
-                    <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:max-w-lg sm:w-full">
+                    <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all">
                     <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="w-full sm:flex sm:items-start">
                             <div class="mt-3 text-center w-full sm:mt-0 sm:ml-4 sm:text-left">
@@ -132,6 +120,7 @@
                     </div>
                 </div>
                 </div>
+                
 
 
             </div>
