--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <div class="flex">
             <!--Sidebar-->
             <div class="bg-blue-700 text-blue-300 w-fit h-screen flex flex-col items-center flex-nowrap whitespace-nowrap">
-                <div class="mx-3 my-2 px-2 py-1 pt-3 text-xl">Reading List</div>
-                <div class="mx-3 my-2 px-2 py-1 text-xl">Library</div>
-                <div class="mx-3 my-2 px-2 py-1 text-xl">Wishlist</div>
+                <button class="mx-3 my-2 px-2 py-1 pt-3 text-xl focus:outline-none" id="reading-list-link">Reading List</button>
+                <button class="mx-3 my-2 px-2 py-1 text-xl focus:outline-none">Library</button>
+                <button class="mx-3 my-2 px-2 py-1 text-xl focus:outline-none">Wishlist</button>
             </div>
             <!--Content-->
             <div class="flex w-full relative">
                 <!--Library Table-->
-                <div class="bg-blue-900 m-6 w-full">
+                <div class="bg-blue-900 m-6 w-full" id="library-table">
                     <div class="flex justify-end mb-4">
                         <button id="table-view-btn" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-lg font-medium focus:outline-none focus:ring-2 focus:ring-gray-400 mr-2">Table View</button>
                         <button id="card-view-btn" class="bg-gray-200 text-gray-700 px-4 py-2 rounded-lg font-medium focus:outline-none focus:ring-2 focus:ring-gray-400">Card View</button>
@@ -60,7 +60,7 @@
                             <th class="border p-2">Read</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="library-tbody">
                         
                         <!-- Add more rows for each book -->
                         </tbody>
@@ -69,8 +69,6 @@
 
                     </div>
                 </div>
-
-
                 <!--Modals-->
                 <!-- New Book Modal: This is the modal that pops up when "New Book" button is clicked -->
                 <div id="new-book-modal" class="hidden absolute top-0 left-0 z-30 w-full h-full flex items-center justify-center">
