Add function reading list, debug delete button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <!--Sidebar-->
             <div class="bg-blue-700 text-blue-300 w-fit h-screen flex flex-col items-center flex-nowrap whitespace-nowrap">
                 <button class="mx-3 my-2 px-2 py-1 pt-3 text-xl focus:outline-none" id="reading-list-link">Reading List</button>
-                <button class="mx-3 my-2 px-2 py-1 text-xl focus:outline-none">Library</button>
+                <button class="mx-3 my-2 px-2 py-1 text-xl focus:outline-none" id="library-link">Library</button>
                 <button class="mx-3 my-2 px-2 py-1 text-xl focus:outline-none">Wishlist</button>
             </div>
             <!--Content-->
