--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!--Search Bar-->
             <div class="relative">
-                <input type="text" placeholder="Search" class="text-blue-100 text-l bg-slate-800 rounded p-1 h-fit pl-8 pr-4">
+                <input type="text" placeholder="Search" id="library-search-filter" class="text-blue-100 text-l bg-slate-800 rounded p-1 h-fit pl-8 pr-4 search-input">
                 <span class="absolute inset-y-0 left-0 flex items-center pl-3">
                   <svg class="h-4 w-4 fill-current text-gray-500" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                     <path d="M6.5 12a5.5 5.5 0 1 1 3.889-1.611l4.428 4.427a1 1 0 1 1-1.414 1.414l-4.428-4.427A5.453 5.453 0 0 1 6.5 12zm0-9a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7z" />
@@ -112,7 +112,7 @@
                                     <option>Author</option>
                                     <option>ISBN</option>
                                   </select>
-                                  <input type="text" name="search-input" id="search-input" class="w-full sm:w-auto flex-1 px-4 py-2 border border-gray-300 rounded-md" placeholder="Search">
+                                  <input type="text" name="search-input" id="google-books-search-input" class="w-full sm:w-auto flex-1 px-4 py-2 border border-gray-300 rounded-md" placeholder="Search">
                                   <div id="search-results" class="mt-4"></div>
                                 </div>
                             </div>
