--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Library</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body class="bg-cyan-800">
 
@@ -140,6 +140,6 @@
 
         </div>
     </div>
-    <script src="/scripts/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
